--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-vue": "5.2.3",
     "lint-staged": "9.2.1",
     "prettier": "1.18.2",
+    "raw-loader": "3.1.0",
     "sass": "1.22.9",
     "sass-loader": "7.1.0",
     "stylelint": "10.1.0",
