--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "npm-run-all": "4.1.5",
     "nprogress": "0.2.0",
     "vue": "2.6.10",
+    "vue-in-viewport-directive": "2.0.0",
     "vue-meta": "2.2.1",
     "vue-router": "3.1.1",
     "vuex": "3.1.1"
