--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run dev",
+    "build": "vue-cli-service build --modern",
+    "test": "run-s test:unit test:e2e",
+    "lint": "run-s lint:all:*",
+    "deploy": "gh-pages-deploy",
+    "build:ci": "vue-cli-service build --modern --report",
+    "clean-source": "rimraf node_modules public src tests .browserslistrc .editorconfig .eslintignore .eslintrc.js .prettierrc.js aliases.config.js babel.config.js cypress.json jest.config.js LICENSE lint-staged.config.js Makefile package.json package-lock.json postcss.config.js README.md stylelint.config.js vue.config.js webpack.config.js",
     "dev": "vue-cli-service serve",
     "dev:e2e": "cross-env VUE_APP_TEST=e2e vue-cli-service test:e2e --mode=development",
-    "build": "vue-cli-service build --modern",
-    "build:ci": "vue-cli-service build --modern --report",
-    "lint:eslint": "eslint --fix",
-    "lint:stylelint": "stylelint --fix",
-    "lint:prettier": "prettier --write --loglevel warn",
     "lint:all:eslint": "eslint --fix --ext .js,.vue .",
-    "lint:all:stylelint": "stylelint --fix \"src/**/*.{vue,scss}\"",
     "lint:all:prettier": "prettier --write --loglevel warn \"**/*.{js,json,css,scss,vue}\"",
-    "lint": "run-s lint:all:*",
-    "test:unit": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit",
-    "test:unit:file": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --bail --findRelatedTests",
-    "test:unit:watch": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --watch --notify --notifyMode --passWithNoTests change",
-    "test:unit:ci": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --coverage --ci",
+    "lint:all:stylelint": "stylelint --fix \"src/**/*.{vue,scss}\"",
+    "lint:eslint": "eslint --fix",
+    "lint:prettier": "prettier --write --loglevel warn",
+    "lint:stylelint": "stylelint --fix",
+    "start": "npm run dev",
+    "test:ci": "run-s test:unit:ci test:e2e",
     "test:e2e": "cross-env VUE_APP_TEST=e2e vue-cli-service test:e2e --headless",
-    "test": "run-s test:unit test:e2e",
-    "test:ci": "run-s test:unit:ci test:e2e"
+    "test:unit": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit",
+    "test:unit:ci": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --coverage --ci",
+    "test:unit:file": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --bail --findRelatedTests",
+    "test:unit:watch": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit --watch --notify --notifyMode --passWithNoTests change"
   },
   "dependencies": {
     "axios": "0.19.0",
@@ -32,7 +34,6 @@
     "localforage-memoryStorageDriver": "0.9.2",
     "lodash": "4.17.15",
     "normalize.css": "8.0.1",
-    "npm-run-all": "4.1.5",
     "nprogress": "0.2.0",
     "vue": "2.6.10",
     "vue-in-viewport-directive": "2.0.0",
@@ -56,9 +57,13 @@
     "eslint-config-semistandard": "15.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-vue": "5.2.3",
+    "gh-pages-deploy": "0.5.1",
     "lint-staged": "9.2.5",
+    "npm-run-all": "4.1.5",
+    "prerender-spa-plugin": "^3.2.1",
     "prettier": "1.18.2",
     "raw-loader": "3.1.0",
+    "rimraf": "3.0.0",
     "sass": "1.22.10",
     "sass-loader": "7.3.1",
     "stylelint": "10.1.0",
@@ -67,7 +72,17 @@
     "stylelint-config-recess-order": "2.0.3",
     "stylelint-config-standard": "18.3.0",
     "stylelint-scss": "3.10.0",
+    "vue-cli-plugin-prerender-spa": "1.1.6",
     "vue-template-compiler": "2.6.10"
+  },
+  "gh-pages-deploy": {
+    "staticpath": "dist",
+    "prep": [
+      "build",
+      "clean-source"
+    ],
+    "commit": "Deployment",
+    "noprompt": false
   },
   "gitHooks": {
     "pre-commit": "cross-env PRE_COMMIT=true lint-staged"
