--- a/package.json
+++ b/package.json
@@ -30,19 +30,21 @@
     "axios-cache-adapter": "2.4.1",
     "core-js": "3.2.1",
     "cross-env": "5.2.0",
+    "highlight.js": "9.15.10",
     "localforage": "1.7.3",
     "localforage-memoryStorageDriver": "0.9.2",
     "lodash": "4.17.15",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "vue": "2.6.10",
+    "vue-highlight.js": "3.1.0",
     "vue-in-viewport-directive": "2.0.0",
     "vue-meta": "2.2.1",
     "vue-router": "3.1.2",
     "vuex": "3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0-beta.3",
+    "@vue/cli-plugin-babel": "4.0.0-rc.3",
     "@vue/cli-plugin-e2e-cypress": "4.0.0-beta.3",
     "@vue/cli-plugin-eslint": "4.0.0-beta.3",
     "@vue/cli-plugin-unit-jest": "4.0.0-beta.3",
