--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "0.19.0",
     "axios-cache-adapter": "2.4.1",
     "core-js": "3.2.1",
-    "cross-env": "5.2.0",
+    "cross-env": "6.0.0",
     "highlight.js": "9.15.10",
     "localforage": "1.7.3",
     "localforage-memoryStorageDriver": "0.9.2",
@@ -39,41 +39,41 @@
     "vue": "2.6.10",
     "vue-highlight.js": "3.1.0",
     "vue-in-viewport-directive": "2.0.0",
-    "vue-meta": "2.2.1",
-    "vue-router": "3.1.2",
+    "vue-meta": "2.2.2",
+    "vue-router": "3.1.3",
     "vuex": "3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.0.0-rc.3",
-    "@vue/cli-plugin-e2e-cypress": "4.0.0-beta.3",
-    "@vue/cli-plugin-eslint": "4.0.0-beta.3",
-    "@vue/cli-plugin-unit-jest": "4.0.0-beta.3",
-    "@vue/cli-service": "4.0.0-beta.3",
+    "@vue/cli-plugin-babel": "4.0.0-rc.6",
+    "@vue/cli-plugin-e2e-cypress": "4.0.0-rc.6",
+    "@vue/cli-plugin-eslint": "4.0.0-rc.6",
+    "@vue/cli-plugin-unit-jest": "4.0.0-rc.6",
+    "@vue/cli-service": "4.0.0-rc.6",
     "@vue/eslint-config-prettier": "5.0.0",
     "@vue/eslint-config-standard": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
-    "eslint": "6.2.2",
+    "eslint": "6.5.0",
     "eslint-config-semistandard": "15.0.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-vue": "5.2.3",
     "gh-pages-deploy": "0.5.1",
-    "lint-staged": "9.2.5",
+    "lint-staged": "9.4.0",
     "npm-run-all": "4.1.5",
-    "prerender-spa-plugin": "^3.2.1",
+    "prerender-spa-plugin": "3.4.0",
     "prettier": "1.18.2",
     "raw-loader": "3.1.0",
     "rimraf": "3.0.0",
-    "sass": "1.22.10",
-    "sass-loader": "7.3.1",
-    "stylelint": "10.1.0",
-    "stylelint-config-css-modules": "1.4.0",
-    "stylelint-config-prettier": "5.2.0",
+    "sass": "1.22.12",
+    "sass-loader": "8.0.0",
+    "stylelint": "11.0.0",
+    "stylelint-config-css-modules": "1.5.0",
+    "stylelint-config-prettier": "6.0.0",
     "stylelint-config-recess-order": "2.0.3",
-    "stylelint-config-standard": "18.3.0",
-    "stylelint-scss": "3.10.0",
+    "stylelint-config-standard": "19.0.0",
+    "stylelint-scss": "3.11.1",
     "vue-cli-plugin-prerender-spa": "1.1.6",
     "vue-template-compiler": "2.6.10"
   },
